# rustganizer

./: Cargo.toml  IMPROVEMENTS.md  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
resources/: rustganizer.rc
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  organizer.rs  ui.rs
src/organizer/: analyzer.rs  async_analyzer.rs  mod.rs  mover.rs  types.rs
src/platform/: user.rs
src/ui/: views.rs
tests/: test_edge_cases.rs  test_organizer.rs  test_platform.rs  test_ui.rs  test_user_provider.rs
